# rawgrep-ui

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/: OFL.txt
src/: color.rs  gpu.rs  highlight.rs  main.rs  prompt.rs  search.rs  ui.rs  util.rs
