[package]
name = "rawgrep-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30.13", features = ["wayland", "x11"] }
wgpu = { version = "28.0.0", default-features = false, features = ["vulkan", "wgsl", "std"] }
pollster = "0.3"
env_logger = "0.11"
fontdue = "0.9"
bytemuck = { version = "1", features = ["derive"] }
smallstr = { version = "0.3", features = ["union"] }
cranelift-entity = "0.129.1"
bitflags = "2.11.0"
smallvec = "1.15.1"
rawgrep = { path = "../rawgrep" }
parking_lot = "0.12.5"

[features]
use_nightly = ["rawgrep/use_nightly"]

[profile.release-fast]
inherits = "release"
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
